--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
     <button class="send">Envoyer</button>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 
   <!-- 7) Script pour le switch thème ---------------------------------------->
