--- a/index.html
+++ b/index.html
@@ -2,125 +2,22 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tchat entre potes</title>
-
-  <!-- 1) Palette gérée par variables CSS ----------------------------------->
-  <style>
-    :root {
-      --bg:          #e0eafc;
-      --bg-panel:    #ffffff;
-      --msg-bg:      #f1f5fb;
-      --text:        #333333;
-      --subtext:     #888888;
-      --primary:     #007bff;
-      --primary-dark:#0056b3;
-    }
-    /* Préférence système dark */
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg:          #121212;
-        --bg-panel:    #1e1e1e;
-        --msg-bg:      #2b2b2b;
-        --text:        #e4e4e4;
-        --subtext:     #aaaaaa;
-        --primary:     #3b82f6;
-        --primary-dark:#2563eb;
-      }
-    }
-    /* Thème forcé par la classe .dark sur <body> */
-    body.dark {
-      --bg:          #121212;
-      --bg-panel:    #1e1e1e;
-      --msg-bg:      #2b2b2b;
-      --text:        #e4e4e4;
-      --subtext:     #aaaaaa;
-      --primary:     #3b82f6;
-      --primary-dark:#2563eb;
-    }
-
-    /* 2) Style général ------------------------------------------------------*/
-    *{margin:0;padding:0;box-sizing:border-box;}
-    body{
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      min-height:100vh;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      padding:20px;
-      transition: background .3s, color .3s;
-    }
-    h1{margin-bottom:20px;font-size:2rem;}
-
-    /* 3) Conteneur messages --------------------------------------------------*/
-    #messages{
-      width:100%;max-width:600px;height:450px;
-      background:var(--bg-panel);
-      border-radius:12px;
-      box-shadow:0 4px 12px rgba(0,0,0,.08);
-      overflow-y:auto;padding:20px;
-      margin-bottom:15px;list-style:none;
-      scroll-behavior:smooth;
-    }
-    #messages li{
-      margin-bottom:15px;padding:10px 15px;
-      background:var(--msg-bg);
-      border-radius:8px;
-      word-wrap:break-word;
-    }
-    #messages li strong{color:var(--primary-dark);}
-    #messages li.system-message{
-      background:none;color:var(--subtext);
-      font-style:italic;text-align:center;
-    }
-
-    /* 4) Zone de saisie ------------------------------------------------------*/
-    .input-container{
-      display:flex;width:100%;max-width:600px;
-    }
-    #messageInput{
-      flex:1;padding:12px 15px;font-size:16px;
-      border:1px solid #ccc;
-      border-top-left-radius:8px;border-bottom-left-radius:8px;
-      outline:none;transition:border-color .3s;
-      background:var(--bg-panel);color:var(--text);
-    }
-    #messageInput:focus{border-color:var(--primary);}
-    button.send{
-      padding:12px 20px;font-size:16px;border:none;
-      background:var(--primary);color:#fff;font-weight:600;
-      border-top-right-radius:8px;border-bottom-right-radius:8px;
-      cursor:pointer;transition:background .3s;
-    }
-    button.send:hover{background:var(--primary-dark);}
-
-    /* 5) Bouton thème --------------------------------------------------------*/
-    #toggleTheme{
-      position:fixed;top:20px;right:20px;
-      background:none;border:2px solid var(--primary);
-      color:var(--primary);font-size:20px;
-      width:42px;height:42px;border-radius:50%;
-      cursor:pointer;transition:all .3s;
-    }
-    #toggleTheme:hover{
-      background:var(--primary);color:#fff;
-    }
-
-    /* 6) Responsive ----------------------------------------------------------*/
-    @media(max-width:600px){
-      #messages{height:350px;} h1{font-size:1.6rem;}
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
 </head>
+
+
 <body>
   <button id="toggleTheme" title="Changer de thème">☀️</button>
-
-  <h1>💬 Tchat entre potes</h1>
-  <div class="input-container" style="margin-bottom:10px;">
-  <input id="pseudoInput" placeholder="Ton pseudo…" autocomplete="off">
+<div id="pseudoModal" style="position:fixed;top:0;left:0;width:100%;height:100%;background:var(--bg);display:flex;flex-direction:column;justify-content:center;align-items:center;z-index:1000;">
+  <h2>Choisis ton pseudo</h2>
+  <input id="pseudoInput" placeholder="Ton pseudo" style="padding:10px;font-size:16px;border-radius:8px;border:1px solid #ccc;margin-top:10px;" />
+  <button id="confirmPseudo" style="margin-top:10px;padding:10px 20px;font-size:16px;background:var(--primary);color:white;border:none;border-radius:8px;cursor:pointer;">Valider</button>
 </div>
 
+  <h1>💬 Tchat entre potes</h1>
   <ul id="messages"></ul>
 
   <div class="input-container">
@@ -131,7 +28,6 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 
-  <!-- 7) Script pour le switch thème ---------------------------------------->
   <script>
     const btnTheme = document.getElementById('toggleTheme');
     const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
