--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <button class="send">Envoyer</button>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://votre-backend.onrender.com/socket.io/socket.io.js"></script>
+
   <script src="script.js"></script>
 
   <script>
